--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-cute-settings (0.9-1) UNRELEASED; urgency=high
+cute-settings (23.02.8) UNRELEASED; urgency=high
 
   * Update <support@cuteos.com>
 
- -- uiyzzi <support@cuteos.com>  Sun, 03 Jul 2022 11:06:36 +0800
+ -- Floating dream <2422586862@qq.com>  Tue, 14 Feb 2023 21:06:52 +0800
 
 cute-settings (0.9) unstable; urgency=high
 
